@@ -8,6 +8,8 @@
   interactivity at all with ssh
 - fixed bad url used when using -v in getsrpm
 - make 'repsys submit' without package name or revision number work again
+- if REPSYS_CONF is set, /etc/repsys.conf and ~/.repsys/config will not be
+  readed anymore
 - added option -F to repsys ci to set a log message file
 - the fix for the unreleased commits problem in the previous release was
   wrong, really fixed it
